<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >


			<RelativeLayout android:id="@+id/page_riskassessmentfragment_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="0dp">

				<View   android:id="@+id/_bg__riskassessmentfragment_ek2"
					android:background="@drawable/_bg__riskassessmentfragment_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="823dp"
					android:layout_marginLeft="0dp" />

				<ImageView android:id="@+id/vector"
					android:src="@drawable/vector"
					android:contentDescription="vector"
					 android:layout_marginStart="-50dp"
					android:layout_marginTop="51dp"
					android:layout_width="510dp"
					android:layout_height="95dp" />

				<ImageView android:id="@+id/vector_ek1"
					android:src="@drawable/vector_ek1"
					android:contentDescription="vector_ek1"
					 android:layout_marginStart="-50dp"
					android:layout_marginTop="675dp"
					android:layout_width="510dp"
					android:layout_height="95dp" />

				<ImageView android:id="@+id/vector_ek2"
					android:src="@drawable/vector_ek2"
					android:contentDescription="vector_ek2"
					 android:layout_marginStart="-0.01dp"
					android:layout_marginTop="41.5dp"
					android:layout_width="411dp"
					android:layout_height="115dp" />

				<ImageView android:id="@+id/vector_ek3"
					android:src="@drawable/vector_ek3"
					android:contentDescription="vector_ek3"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="666dp"
					android:layout_width="411dp"
					android:layout_height="115dp" />

				<ImageView android:id="@+id/rectangle_8"
					android:src="@drawable/rectangle_8"
					android:contentDescription="rectangle_8"
					 android:layout_marginStart="86dp"
					android:layout_marginTop="179dp"
					android:layout_width="237dp"
					android:layout_height="244dp" />

				<TextView android:id="@+id/report_1"
					android:textStyle="bold|italic"
					android:textSize="36sp"
					android:textColor="@color/report_1_color"
					android:layout_marginLeft="130dp"
					android:layout_marginTop="69dp"
					android:layout_width="200dp"
					android:layout_height="91dp"
					android:text="@string/report_1_string"
					 />

				<TextView android:id="@+id/type_of_hazard_"
					android:textStyle="bold"
					android:textSize="20sp"
					android:textColor="@color/report_1_color"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="413dp"
					android:layout_width="169dp"
					android:layout_height="43dp"
					android:text="@string/type_of_hazard__string"
					 />

				<TextView android:id="@+id/description_"
					android:textStyle="bold"
					android:textSize="20sp"
					android:textColor="@color/report_1_color"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="455dp"
					android:layout_width="139dp"
					android:layout_height="43dp"
					android:text="@string/description__string"
					 />

				<TextView android:id="@+id/severity_level_"
					android:textStyle="bold"
					android:textSize="20sp"
					android:textColor="@color/report_1_color"
					android:layout_marginLeft="33dp"
					android:layout_marginTop="505dp"
					android:layout_width="163dp"
					android:layout_height="43dp"
					android:text="@string/severity_level__string"
					 />

				<View   android:id="@+id/ellipse_6"
					android:background="@drawable/ellipse_6_shape"
					 android:layout_marginStart="105dp"
					android:layout_marginTop="595dp"
					android:layout_width="20dp"
					android:layout_height="19dp" />

				<TextView android:id="@+id/mark_as_complete"
					android:textStyle="bold"
					android:textSize="20sp"
					android:textColor="@color/report_1_color"
					android:layout_marginLeft="141dp"
					android:layout_marginTop="590dp"
					android:layout_width="192dp"
					android:layout_height="43dp"
					android:text="@string/mark_as_complete_string"
					 />

				<ImageView android:id="@+id/rectangle_10"
					android:src="@drawable/rectangle_10"
					android:contentDescription="rectangle_10"
					 android:layout_marginStart="33dp"
					android:layout_marginTop="383dp"
					android:layout_width="25dp"
					android:layout_height="23dp" />

				<TextView android:id="@+id/edit"
					android:textStyle="bold"
					android:textSize="14sp"
					android:textColor="@color/report_1_color"
					android:layout_marginLeft="61dp"
					android:layout_marginTop="387dp"
					android:layout_width="47dp"
					android:layout_height="31dp"
					android:text="@string/edit_string"
					 />


				<RelativeLayout android:id="@+id/frame_1"
					android:layout_marginTop="689dp"
					android:layout_marginStart="117dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/login"
						android:textSize="36sp"
						android:textColor="@color/login_color"
						android:layout_marginLeft="20dp"
						android:layout_marginTop="10dp"
						android:layout_width="176dp"
						android:layout_height="74dp"
						android:text="@string/login_string"
						 />

				</RelativeLayout>

			</RelativeLayout>
</layout>