<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >


			<RelativeLayout android:id="@+id/page_reportlistfragment_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="0dp">

				<View   android:id="@+id/_bg__reportlistfragment_ek2"
					android:background="@drawable/_bg__reportlistfragment_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="823dp"
					android:layout_marginLeft="0dp" />

				<View   android:id="@+id/rectangle_11"
					android:background="@drawable/rectangle_11_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="823dp"
					android:layout_marginLeft="0dp" />

				<View   android:id="@+id/rectangle_13"
					android:background="@drawable/rectangle_13_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="823dp"
					android:layout_marginLeft="0dp" />

				<View   android:id="@+id/rectangle_12"
					android:background="@drawable/rectangle_12_shape"
					 android:layout_marginStart="27dp"
					android:layout_marginTop="34dp"
					android:layout_width="363dp"
					android:layout_height="761dp"
					android:layout_marginLeft="27dp" />

				<ImageView android:id="@+id/construction_1"
					android:src="@drawable/construction_1"
					android:contentDescription="construction_1"
					 android:layout_marginStart="27dp"
					android:layout_marginTop="246dp"
					android:layout_width="357dp"
					android:layout_height="357dp" />

				<TextView android:id="@+id/risk_assessment"
					android:textStyle="bold|italic"
					android:textSize="36sp"
					android:textColor="@color/risk_assessment_color"
					android:layout_marginLeft="62dp"
					android:layout_marginTop="69dp"
					android:layout_width="387dp"
					android:layout_height="100dp"
					android:text="@string/risk_assessment_string"
					 />

				<View   android:id="@+id/line_1"
					android:background="@drawable/line_1_shape"
					 android:layout_marginStart="27dp"
					android:layout_marginTop="159dp"
					android:layout_width="357dp"
					android:layout_height="1dp" />


				<RelativeLayout android:id="@+id/group_4"
					android:layout_marginTop="199dp"
					android:layout_marginStart="14dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/report_1"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/risk_assessment_color"
						android:layout_marginLeft="109dp"
						android:layout_marginTop="25dp"
						android:layout_width="109dp"
						android:layout_height="43dp"
						android:text="@string/report_1_string"
						 />

					<ImageView android:id="@+id/rectangle_7"
						android:src="@drawable/rectangle_7"
						android:contentDescription="rectangle_7"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="97dp"
						android:layout_height="89dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/group_5"
					android:layout_marginTop="311dp"
					android:layout_marginStart="16dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/report_2"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/risk_assessment_color"
						android:layout_marginLeft="109dp"
						android:layout_marginTop="25dp"
						android:layout_width="109dp"
						android:layout_height="43dp"
						android:text="@string/report_2_string"
						 />

					<ImageView android:id="@+id/rectangle_7_ek1"
						android:src="@drawable/rectangle_7_ek1"
						android:contentDescription="rectangle_7_ek1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="97dp"
						android:layout_height="89dp" />

				</RelativeLayout>

				<ImageView android:id="@+id/border"
					android:src="@drawable/border"
					android:contentDescription="border"
					 android:layout_marginStart="1dp"
					android:layout_marginTop="4dp"
					android:layout_width="408dp"
					android:layout_height="815dp" />

			</RelativeLayout>

</layout>